--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
     <div class="container">
         <h4 id="Abstract" style="padding-top: 70px; margin-top: -80px; ">Abstract</h4>
         <div style="text-align: justify">
-            Grasping objects of different shapes and sizes, which is a foundational, effortless skill for humans, remains a difficult problem in robotics. Although model-based approaches can predict stable grasp configurations for known object models, they struggle to generalize to novel objects and operate in a non-interactive open-loop manner. In this work, we present a reinforcement learning policy capable of grasping various geometrically distinct real-world objects by continuously controlling an anthropomorphic robotic hand. To this end, we explore several explicit representations of object geometry as policy observations. Moreover, we propose to inform the policy implicitly through signed distances and show that this provides a concise representation and is naturally suited to reduce the search space through a shaped reward component. Finally, we demonstrate that proposed framework is able to learn even in more challenging conditions, such as targeted grasping from a cluttered bin.        
+            Grasping objects of different shapes and sizes, which is a foundational, effortless skill for humans, remains a difficult problem in robotics. Although model-based approaches can predict stable grasp configurations for known object models, they struggle to generalize to novel objects and operate in a non-interactive open-loop manner. In this work, we present a reinforcement learning policy capable of grasping various geometrically distinct real-world objects by continuously controlling an anthropomorphic robotic hand. To this end, we explore several explicit representations of object geometry as policy observations. Moreover, we propose to inform the policy implicitly through signed distances and show that this provides a concise representation and is naturally suited to reduce the search space through a shaped reward component. Finally, we demonstrate that the proposed framework is able to learn even in more challenging conditions, such as targeted grasping from a cluttered bin.        
 
 </div>
     </div><br><br>
 
     <div class="container">
         <h4 id="Videos" style="padding-top: 30px; margin-top: -40px;">Videos</h4>
-        Videos show the explicit object representations the policy operates on during manipulation. The bounding box is represented via its center pose and extent. Superquadrics are defined by their pose, 3 size, and 2 shape parameters. The points visualized in the videos lie on the recovered superquadric. 
+        <h5>Explicit Representations of Object Geometry</h5>
+        Videos show the explicit object representations the policy operates on during manipulation. The bounding box is represented via its center pose and extent. Superquadrics are defined by their pose, 3 size, and 2 shape parameters. The points visualized in the videos lie on the recovered superquadric. We reduce the framerate of the videos to make it easier to follow the agent's behavior, since the policy is optimized to solve the tasks as fast as possible.
         <div class="row">
             <div class="col-md-12">
                 <ul>
@@ -163,18 +164,36 @@
                         </tr>
                     </table>
                     <br>
+                    <h5>Bin Picking</h5>
+                    The rollouts below show a trained policy that picks a target object from clutter and highlight the main challenges of <b>object interaction</b>, strong <b>variation in object size</b>, and <b>difficult accessibility</b> of some positions in the deep bin. 
+                    <br>
+                    <table class="center">
+                        <tr style=font-size:15pt>
+                            <td style='text-align:center; vertical-align:middle' colspan="1">Pick red cup under object <br> interaction</td>
+                            <td style='text-align:center; vertical-align:middle' colspan="1">Pick large pitcher</td>
+                            <td style='text-align:center; vertical-align:middle' colspan="1">Continuous pre-grasp manipulation to <br>pick tomato soup can</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <video width="340" class="center" controls>
+                                    <source src="files/videos/pick_red_cup.mp4" type="video/mp4">
+                                </video>
+                            </td>
+                            <td>
+                                <video width="340" class="center" controls>
+                                    <source src="files/videos/pick_pitcher_base.mp4" type="video/mp4">
+                                </video>
+                            </td>
+                            <td>
+                                <video width="340" class="center" controls>
+                                    <source src="files/videos/pick_tomato_soup_can.mp4" type="video/mp4">
+                                </video>
+                            </td>
+                        </tr>
+                    </table>
                 </ul>
             </div>
         </div>
     </div><br><br><br>
-
-
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
 </body>
-
 </html>
